# dumptruck

./: .gitignore  AGENT_PROGRESS.md  CHANGELOG.md  Cargo.toml  DETAILED_REPORTING_PHASE1.md  EXAMPLES.md  IMPLEMENTATION_REMAINING.md  LICENSE  LICENSE.md  OPENNESS.md  PROGRESS.md  README.md  SECURITY.md  SUPPORT.md  config.default.json  config.schema.json  docker-compose.yml  stress_test.rs
.github/: copilot-instructions.md
.github/agents/: 1-Architect.agent.md  2-TestDeveloper.agent.md  3-BackendDeveloper.agent.md  4-UIDeveloper.agent.md  5-CodeReviewer.agent.md  6-SecurityReviewer.agent.md  7-TechnicalWriter.agent.md  8-DocReviewer.agent.md  9-ReleaseReviewer.agent.md  CodeReviewer.agent.md  DocReviewer.agent.md  Planner.agent.md
.github/instructions/: AURORA.instructions.md  AURORA.schema.json  Aurora.instructions.md  Markdown.instructions.md  Rust.instructions.md
.github/workflows/: build.yml  lint.yml  push.yml  release.yml  security.yml  test.yml
data/: detection_demo.csv  weak_passwords.txt
debian/: changelog  control  copyright  postinst  rules
deploy/: Dockerfile  README.md  docker-compose.yml  init-db.sql
docker/: README.md  init-db.sql
docker/ollama/: Dockerfile  README.md  docker-compose.yml  nvidia.sh
docker/postgres/: Dockerfile  README.md  docker-compose.yml  init-db-stage13.sql  init-db.sql
docs/: CLI_USAGE.md  CONFIGURATION.md  CONFIG_QUICK_REFERENCE.md  DEDUP_ARCHITECTURE.md  DETAILED_REPORT_SCHEMA.md  DETECTION_DEMO_README.md  DETECTION_ENDPOINT_EXAMPLES.md  EMAIL_SUFFIX_SUBSTITUTION.md  ENRICHMENT.md  EXAMPLES.md  HIBP.md  HIBP_IMPLEMENTATION.md  OLLAMA.md  OPERATIONAL_SAFETY.md  PARALLEL_PROCESSING_SUMMARY.md  PEER_DISCOVERY_SYNC.md  PEER_SYNC_DESIGN.md  PIPELINE_DIAGRAM.md  RISK_SCORING_ALGORITHM.md  SECURITY_OPS.md  STREAMING.md  STRESS_TEST.md  VECTOR_DEDUP.md  VERSIONING.md
docs/architecture/: ARCHITECTURE.md  COMPONENTS.md  DATA_FLOW_AND_EXTENSIBILITY.md  DEPLOYMENT.md  INTERFACES.md
docs/architecture/diagrams/: components.md  deployment.md  pipeline.md
docs/data/: MODULES.md
docs/design/: Capabilities.md  DEDUP_ARCHITECTURE.md  DedupArchitecture.md  PIPELINE_MAP.md  PipelineMap.md  README.md  Readme.md  SEED_FEATURE.md
docs/design/FEATURE_CARDS/: README.md  analysis.md  enrichment.md  extensibility.md  history_privacy.md  ingestion.md  normalization.md  security.md  server_modes.md  storage.md
docs/design/architecture/: ARCHITECTURE.md  Components.md  DATA_FLOW_AND_EXTENSIBILITY.md  DataFlowAndExtensibility.md  Deployment.md  Interfaces.md  Security.md
docs/design/aurora/: Aurora.schema.json  (+2 more)
docs/threat/: DETECTION-007-BANKACCOUNT.md  DETECTION-010-NAME.md  DETECTION-014-ANOMALY.md  README.md  THREAT_CARD_TEMPLATE.md
examples/adapters/: README.md
examples/scripts/: README.md  backup-keys.sh  rotate-keys.sh
src/: adapters.rs  alias_resolution.rs  analyze.rs  anomaly_detection.rs  api.rs  async_pipeline.rs  cli.rs  common.rs  config.rs  configuration.rs  core.rs  data.rs  database.rs  datafile.rs  db_export.rs  db_import.rs  db_stats.rs  deploy.rs  deploy_manager.rs  detection.rs  enrichment.rs  evidence.rs  file_lock.rs  handlers.rs  hash_utils.rs  ingest.rs  job_queue.rs  lib.rs  main.rs  network.rs  normalization.rs  npi_detection.rs  oauth.rs  ollama.rs  output.rs  peer_discovery.rs  peer_sync.rs  pipeline.rs  rainbow_table.rs  rainbow_table_builder.rs  (+13 more)
src/analyze/: analyzeargs.rs  analyzeerror.rs  datafile.rs  detection.rs  normalization.rs  safe_ingest.rs
src/api/: handlers.rs  output.rs  server.rs
src/common/: hash.rs
src/core/: config.rs  config_tests.rs  file_lock.rs  hash_utils.rs  hash_utils_tests.rs  secure_deletion.rs
src/data/: database.rs  exportargs.rs  importargs.rs
src/database/: analyzedfiles.rs  credentials.rs  exportargs.rs  identities.rs  importargs.rs  metadata.rs  migrate.rs  migrationtrait.rs  npi.rs  rainbowtable.rs
src/datafile/: datafieldtype.rs  datafile.rs  datafileerror.rs  datafiletypes.rs
src/deploy/: async_pipeline.rs  deploy_manager.rs  pipeline.rs
src/detection/: analyzer.rs  anomaly_detection.rs  detection.rs  npi_detection.rs  rainbow_table.rs
src/enrichment/: hibp.rs  ollama.rs  rainbow_table_builder.rs  risk_scoring.rs  service.rs
src/ingest/: compression.rs  safe_ingest.rs  streaming.rs  universal_parser.rs
src/network/: oauth.rs  peer_discovery.rs  peer_sync.rs
src/normalization/: alias_resolution.rs  evidence.rs  normalization.rs
src/rainbowtable/: rainbowtable.rs  rainbowtableargs.rs
src/seed/: builder.rs  manager.rs  seedargs.rs  seederror.rs  seedimportstats.rs
src/server/: serverargs.rs
src/status/: statusargs.rs
src/storage/: chain_of_custody.rs  db.rs  db_export.rs  db_import.rs  db_stats.rs  job_queue.rs  working_copy.rs
src/util/: checksum.rs  files.rs  hash.rs  normalize.rs  secure_deletion.rs
static/: Dumptruck.512.xcf
tests/: NPI_FIXTURES_README.md  async_pipeline.rs  async_pipeline.rs.skip  cli.rs  cli.rs.skip  config.rs  e2e_comprehensive.rs  e2e_comprehensive.rs.skip  hibp.rs.skip  ingest_fixtures.rs.skip  ingest_with_date_target.rs  integration_simple_enricher.rs.skip  normalization_unicode.rs  npi_fixtures.rs  ollama.rs  pipeline_malformed.rs.skip  prop_normalization.proptest-regressions  prop_normalization.rs  storage_stage13.rs  test_rainbow_file_changes.rs  universal_parser.rs
tests/fixtures/: FIXTURES_README.md  PII_DETECTION_README.md  TLS_README.md  breached_addresses.csv  crypto_and_financial_pii.csv  duplicate_rows.csv  empty_fields.csv  hashed_credentials.csv  hashed_credentials_detection.csv  international_phone_ids.csv  json_credentials.json  large_dataset.csv  malformed_mismatched_columns.csv  malformed_missing_quote.csv  mismatched_columns.csv  missing_header.csv  mixed_format_data.csv  pii_detection.csv  special_characters.csv  tab_separated.tsv  test_creds_100.csv  test_creds_mixed.csv  test_creds_small.csv  unicode_addresses.csv  unique_addresses.csv  weak_passwords.csv  well_formed_credentials.csv  whitespace_variations.csv  yaml_credentials.yaml
tools/aurora-validator/: Cargo.toml
(+231 files in other folders)
