[package]
name = "dumptruck"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["JEleniel and contributors"]
description = "A high-performance bulk data analysis system for threat intelligence and credential breach analysis"
repository = "https://github.com/yourusername/dumptruck"
readme = "README.md"

[[bin]]
name = "stress-test"
path = "stress_test.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
glob = "0.3"
hex = "0.4"
http-body-util = "0.1"
hyper = { version = "1.6", features = ["full"] }
icu_casemap = { version = "2.1", features = ["compiled_data"] }
md5 = "0.7"
postgres = "0.19"
rayon = "1.8"
reqwest = { version = "0.12", features = ["json"] }
rustls = { version = "0.23", features = ["ring", "std"] }
rustls-pemfile = "2.2"
serde = "1.0"
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.40", features = ["full"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
unicode-normalization = "0.1"
urlencoding = "2.1"
uuid = { version = "1.10", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
proptest = "1.0"
